Fixed about image wrapping and size; updated resume

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1514,6 +1514,10 @@ ul.icons li a:active {
 		margin: 2rem 0;
 	}
 
+		.image.about {
+		margin: 0 2rem 2rem 0;
+	}
+
 }
 
 @media screen and (max-width: 480px) {
@@ -1522,6 +1526,25 @@ ul.icons li a:active {
 		margin: 1.5rem 0;
 	}
 
+		.image.about {
+		margin: 0 2rem 2rem 0;
+	}
+
+}
+
+.image.about {
+	box-sizing: border-box;
+	shape-outside: url(headshot.png);
+	margin: 0 2rem 2rem 0;
+	float: left;
+	border-radius: 10px;
+	box-shadow: inset 0 -2em 2em rgb(0 200 0 / 30%),
+    0.3em 0.3em 1em rgb(0, 0, 0);
+	max-inline-size: 50vh;
+}
+
+.image.about img {
+	width: 100%;
 }
 
 /*=========================================================================================================================*/
